--- a/src/App.css
+++ b/src/App.css
@@ -8,23 +8,64 @@
     flex-direction: column;
     gap: 20px;
     height: 100vh;
-background-image: url('https://w0.peakpx.com/wallpaper/784/284/HD-wallpaper-red-grey-abstract-background-black-colors-fade-gradient-oneplus-oneplus-6t-texture-ultra.jpg');
+    width: 70%;
+/* background-image: url('https://w0.peakpx.com/wallpaper/784/284/HD-wallpaper-red-grey-abstract-background-black-colors-fade-gradient-oneplus-oneplus-6t-texture-ultra.jpg'); */
 background-size: cover;
 /* Adjust background size as needed */
 background-repeat: no-repeat;
 background-attachment: fixed;
 }
+
+
+.modal {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.5);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.modal-content {
+  background: #fff;
+  padding: 20px;
+  border-radius: 5px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+  width: 30%;
+}
+
+.modal button {
+  background: #007BFF;
+  color: #fff;
+  border: none;
+  padding: 10px 20px;
+  border-radius: 5px;
+  cursor: pointer;
+  margin-top: 10px;
+  margin: auto;
+  width: 30%;
+}
+
 .form{
   display: flex;
   flex-direction: column;
   gap: 20px;
-  color: white;
+  color: rgb(0, 0, 0);
   align-items: center;
   align-content: center;
-  background: #f4f4f421;
+  background: #ffffff;
   border-radius: 20px;
   padding: 20px;
   width: 50%;
+  max-height: 80%;
+  box-shadow: grey 0px 0px 13px 2px;
+  overflow-y: auto;
 
 }
 .App-logo {
@@ -37,7 +78,11 @@ background-attachment: fixed;
     animation: App-logo-spin infinite 20s linear;
   }
 }
-
+.form button{
+  background: #007BFF;
+  border-style: none;
+  cursor: pointer;
+}
 .App-header {
   background-color: #282c34;
   min-height: 100vh;
@@ -52,12 +97,41 @@ background-attachment: fixed;
 .App-link {
   color: #61dafb;
 }
-
+.modalHeader{
+  display: flex;
+  justify-content: space-between;
+}
+.sidebar{
+  width: 30%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background: cornflowerblue;
+}
 @keyframes App-logo-spin {
   from {
     transform: rotate(0deg);
   }
   to {
     transform: rotate(360deg);
+  }
+}
+@media (max-width:480px){
+  .main{
+    flex-direction: column;
+  }
+  .sidebar{
+    width: 100%;
+    margin: auto;
+  }
+  .form{
+    padding: 10%;
+    width: 100%;
+  }
+  .modal-content{
+    width: 80%;
+  }
+  .FormBody{
+    margin: auto;
   }
 }
